# ArtSynthesis

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: example_humanoid.json  example_humanoid.yaml  example_robot.json  military_engineer_side_view.json
examples/: demo_generate_showcase.py
src/artsynthesis/: __init__.py  __main__.py  generator.py  pipeline.py
src/artsynthesis/cli/: __init__.py  commands.py
src/artsynthesis/config/: __init__.py  defaults.py  loader.py  schema.py  validator.py
src/artsynthesis/modules/: __init__.py  feedback.py  model_manager.py  multi_stream.py  pause_resume.py  reference_search.py
src/artsynthesis/state/: __init__.py  checkpoint.py  metrics.py  state_machine.py
src/artsynthesis/utils/: __init__.py  device.py  error_handler.py  logging.py  path_utils.py
tests/: test_pipeline.py
